--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>antor</p>
+    <div id="hero" style="height: 500px; width: 500px; border: 2px solid black;"></div>
+    <button onclick="colorChange()"> try it</button>
 </body>
 </html>
