--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script.js" defer></script>
+    <script src="date.js" defer></script>
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <div id="hero" style="height: 500px; width: 500px; border: 2px solid black;"></div>
-    <button onclick="colorChange()"> try it</button>
+   
 </body>
 </html>
