--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="date.js" defer></script>
+    <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-   
+     <div id="colorContainer" style="height: 300px; width: 300px; border: 2px solid black;"></div>
+     <button onclick="changeTheColor()"> click here</button>
 </body>
 </html>
