--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="loop.js" defer></script>
+    <script src="set & map.js" defer></script>
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
